--- a/README.org
+++ b/README.org
@@ -1,2 +1,12 @@
-* EmacsTalk
-Emacs Rocks!
+#+begin_src
+ ______                       _______    _ _
+|  ____|                     |__   __|  | | |
+| |__   _ __ ___   __ _  ___ ___| | __ _| | | __
+|  __| | '_ ` _ \ / _` |/ __/ __| |/ _` | | |/ /
+| |____| | | | | | (_| | (__\__ \ | (_| | |   <
+|______|_| |_| |_|\__,_|\___|___/_|\__,_|_|_|\_\
+#+end_src
+
+- https://emacstalk.github.io/
+  - 分享 Emacs 使用技巧，编程心得
+  - 采访 Emacs Hackers，见证巨人的成长历程
