--- a/content/about.org
+++ b/content/about.org
@@ -13,7 +13,14 @@
 - 分享 Emacs 使用技巧，编程心得
 - 采访 Emacs Hackers，见证巨人的成长历程
 
-[[/images/weixin.jpg]]
+* 如何参与录制
+感谢您有兴趣参与《EmacsTalk》节目的录制，目前具体流程还没确定，可以通过后面的联系方式来沟通录制细节。一些供参考资料：
+- https://pythonhunter.org/howto
+- [[https://anobody.im/article/podcastforbeginner/][新手如何从零开始一档播客]]
+* 联系方式
+- 本网站留言
+- 邮件： ~jiacai2050+emacstalk@gmail.com~
+- 微信公众号 [[/images/weixin.jpg]]
 
 * Changelog
 - 2021-06-26，使用 [[https://gohugo.io/][hugo]] + [[https://github.com/frjo/hugo-theme-zen][zen]] 主题建站
