fix date not shown

--- a/content/podcast/1.md
+++ b/content/podcast/1.md
@@ -1,5 +1,5 @@
 ---
-title: "First Podcast"
+title: "测试 Podcast"
 date: 2021-06-26T09:43:18+08:00
 podcast:
     mp3: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
@@ -7,4 +7,4 @@ podcast:
 ---
 
 - Hello Emacs
-- Just a test.
+- 我是一个测试
