--- a/README.org
+++ b/README.org
@@ -10,3 +10,9 @@
 - https://emacstalk.github.io/
   - 分享 Emacs 使用技巧，编程心得
   - 采访 Emacs Hackers，见证巨人的成长历程
+
+* iTunes Podcasts
+- [[https://podcasters.apple.com/support/825-how-to-create-an-episode][How to create an episode]]
+- [[https://help.apple.com/itc/podcasts_connect/#/itcb54353390][A Podcaster’s Guide to RSS]]
+- [[https://castfeedvalidator.com/?url=https://emacstalk.github.io/podcast/index.xml][Cast Feed Validator]]
+- image 大小需要在 1400*1400 ~ 3000*3000 之间
