--- a/content/podcast/1.md
+++ b/content/podcast/1.md
@@ -3,8 +3,11 @@ title: "测试 Podcast"
 date: 2021-06-26T09:43:18+08:00
 podcast:
     mp3: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
-    duration: "0:06:12"
+    duration: "6:12"
+    length: "8945229"
 ---
 
 - Hello Emacs
 - 我是一个测试
+- 招募 Podcast 嘉宾，分享你与 Emacs 的故事。
+- 联系方式：[emacstalk.github.io](https://emacstalk.github.io/about/)
