--- a/content/podcast/1.md
+++ b/content/podcast/1.md
@@ -1,13 +1,36 @@
 ---
-title: "测试 Podcast"
+title: "EmacsTalk 节目简介"
 date: 2021-06-26T09:43:18+08:00
 podcast:
-    mp3: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
-    duration: "6:12"
-    length: "8945229"
+    mp3: "https://aod.cos.tx.xmcdn.com/storages/56b9-audiofreehighqps/59/A8/CKwRIRwErgs2ADPd0gC_fHiy.m4a"
+    duration: "6:59"
+    length: "3399122"
 ---
 
-- Hello Emacs
-- 我是一个测试
-- 招募 Podcast 嘉宾，分享你与 Emacs 的故事。
-- 联系方式：[emacstalk.github.io](https://emacstalk.github.io/about/)
+# 主要内容
+
+EmacsTalk 是干啥的，是主播一时脑袋发热运营的嘛？等等，主播是谁？
+
+# Show Notes
+
+-   [Structure and Interpretation of Computer Programs (SICP)](https://mitpress.mit.edu/sites/default/files/sicp/index.html)
+-   [MIT/GNU Scheme](https://www.gnu.org/software/mit-scheme/)
+-   主播最早用的配置 [emacs-for-clojure](https://www.braveclojure.com/basic-emacs/)
+-   主播目前的配置 [.config/emacs](https://github.com/jiacai2050/dotfiles/tree/master/.config/emacs)。一些用到的库
+    -   [use-package](https://github.com/jwiegley/use-package), 包安装与配置
+    -   [evil](https://github.com/emacs-evil/evil)，让 Emacs 拥有 VI 按键方式，释放小手指
+    -   [company](https://company-mode.github.io/)，代码补全
+    -   [lsp-mode](https://github.com/emacs-lsp/lsp-mode/) 代码跳转
+    -   [mu4e](https://www.djcbsoftware.nl/code/mu/mu4e.html) 邮件
+    -   [elfeed](https://github.com/skeeto/elfeed) RSS 阅读
+-   主播博客：<https://liujiacai.net/>
+    -   网络 ID：写代码的西瓜
+
+第一次录制，不足之处还望听友包涵，有任何建议欢迎留言指出，谢谢！
+
+# 广告
+  - 招募 Podcast 嘉宾，分享你与 Emacs 的故事。
+  - 联系方式
+    - 官网：[emacstalk.github.io](https://emacstalk.github.io/about/)
+    - 公众号：EmacsTalk
+  ![EmacsTalk QR](/images/weixin.jpg)
