--- a/content/about.org
+++ b/content/about.org
@@ -13,6 +13,11 @@
 
 EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。干货不能不要，湿货不能没有。
 
+* 收听方式
+- [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]
+- [[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]
+- 使用泛用性播客客户端订阅：https://emacstalk.github.io/podcast/index.xml
+
 * 如何参与录制
 感谢您有兴趣参与《EmacsTalk》节目的录制，录制主要采用对话形式，大纲如下：
 
