--- a/content/about.org
+++ b/content/about.org
@@ -11,26 +11,19 @@
 |______|_| |_| |_|\__,_|\___|___/_|\__,_|_|_|\_\
 #+end_example
 
-EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。干货不能不要，湿货不能没有。节目主旨：
+EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨：
 - 专注 Emacs 社区，分享使用技巧；探索 Emacs 社区背后的人与事
+- 干货不能不要，湿货不能没有
 * 收听方式
 - 推荐使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]]
 - [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]
 - [[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]
-- 微信公众号 [[/images/weixin.jpg]]
+- 微信公众号
+  #+ATTR_HTML: :width 500px
+  [[/images/weixin.jpg]]
 
 * 如何参与录制
-感谢您有兴趣参与《EmacsTalk》节目的录制，录制主要采用对话形式，大纲如下：
-
-1. 嘉宾个人简介，5-10 分钟
-2. Emacs 初印象，5-10 分钟
-3. Emacs 学习经历，10-20 分钟
-4. 日常工作流，10 分钟
-5. 推荐的 package，5分钟
-
-时间控制在 30 分钟到 1 个小时之间。当然，如果嘉宾有什么要求，也可以再沟通。录制时的一些注意事项可参考：
-- https://pythonhunter.org/howto
-- [[https://anobody.im/article/podcastforbeginner/][新手如何从零开始一档播客]]
+- https://github.com/EmacsTalk/joinus
 
 * 联系方式
 - 本网站留言
@@ -38,5 +31,4 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。干货不能
 - 邮件： [[mailto:jiacai2050+emacstalk@gmail.com][jiacai2050+emacstalk@gmail.com]]
 
 * Changelog
-- 2021-06-27，长久的办下去不敢说，先立个 flag，五年（即 2026-06-27）
 - 2021-06-26，使用 [[https://gohugo.io/][hugo]] + [[https://github.com/frjo/hugo-theme-zen][zen]] 主题建站
