--- a/content/about.org
+++ b/content/about.org
@@ -12,12 +12,13 @@
 #+end_example
 
 EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨：
-- 专注 Emacs 社区，分享使用技巧；探索 Emacs 社区背后的人与事
-- 干货不能不要，湿货不能没有
+- 专注 Emacs 社区，探索 Emacs 社区背后的 *奇人轶事*
+- 不追求「枯燥无味」的干货，更关注「耐人寻味」经验分享
+
 * 收听方式
 - 推荐使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]]
 - [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]
-- [[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]
+- [[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（美区，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
 - 微信公众号
   #+ATTR_HTML: :width 500px
   [[/images/weixin.jpg]]
