--- a/content/about.org
+++ b/content/about.org
@@ -16,10 +16,7 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨
 - 不追求「枯燥无味」的干货，更关注「耐人寻味」经验分享
 
 * 收听方式
-- 推荐使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]]
-- [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]
-- [[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（美区，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
-- 微信公众号
+推荐使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]] 或在[[https://weixin.sogou.com/weixin?&query=EmacsTalk][微信公众号]]收听，其次是 [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]、[[https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI][Spotify]]、[[https://castbox.fm/channel/EmacsTalk-id4367580][Castbox]]、[[https://pca.st/hbvw3oxs][Pocket Casts]]、[[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（美区，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
   #+ATTR_HTML: :width 500px
   [[/images/weixin.jpg]]
 
@@ -27,9 +24,13 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨
 - https://github.com/EmacsTalk/joinus
 
 * 联系方式
-- 本网站留言
+- 网站、微信公众号留言
 - Telegram 群组：https://t.me/emacstalk
-- 邮件： [[mailto:jiacai2050+emacstalk@gmail.com][jiacai2050+emacstalk@gmail.com]]
+- 邮件：[[mailto:emacstalk@liujiacai.net][emacstalk@liujiacai.net]]
 
+* 请作者喝咖啡
+- [[/images/alipay.jpeg][支付宝]]
+- [[/images/weixinzhifu.jpeg][微信支付]]
 * Changelog
+- 2021-07-04，修改 zen podcast 模板，可以用 org 编写文章
 - 2021-06-26，使用 [[https://gohugo.io/][hugo]] + [[https://github.com/frjo/hugo-theme-zen][zen]] 主题建站
