--- a/content/about.org
+++ b/content/about.org
@@ -17,7 +17,7 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨
 
 * 收听方式
 1. 首推使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]] 或在微信公众号 [[https://weixin.sogou.com/weixin?&query=EmacsTalk][EmacsTalk]] 中收听
-2. 其次是 [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]、[[https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI][Spotify]]、[[https://castbox.fm/channel/EmacsTalk-id4367580][Castbox]]、[[https://pca.st/hbvw3oxs][Pocket Casts]]、[[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（美区，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
+2. 其次是 [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]、[[https://music.163.com/#/djradio?id=963834541][网易云音乐]]、[[https://y.qq.com/n/ryqq/albumDetail/000BkGbT1J1Mo2][QQ 音乐]]、[[https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI][Spotify]]、[[https://castbox.fm/channel/EmacsTalk-id4367580][Castbox]]、[[https://pca.st/hbvw3oxs][Pocket Casts]]、[[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（美区，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
   #+ATTR_HTML: :width 500px
   [[/images/weixin.jpg]]
 
@@ -31,7 +31,7 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨
 
 * Buy me a coffee ☕️
 - [[/images/alipay.jpeg][支付宝]]
-- [[/images/weixinzhifu.jpeg][微信支付]]
+- [[/images/weixinzhifu.jpg][微信支付]]
 * Changelog
 - 2021-07-04，修改 zen podcast 模板，可以用 org 编写文章
 - 2021-06-26，使用 [[https://gohugo.io/][hugo]] + [[https://github.com/frjo/hugo-theme-zen][zen]] 主题建站
