--- a/content/podcast/001.org
+++ b/content/podcast/001.org
@@ -1,6 +1,7 @@
 #+TITLE: 001. EmacsTalk 节目简介
 #+DATE: 2021-06-26T09:43:18+08:00
 #+LASTMOD: 2021-07-04T09:27:31+08:00
+#+ALIASES[]: /podcast/1/
 #+PODCAST_MP3: https://aod.cos.tx.xmcdn.com/storages/56b9-audiofreehighqps/59/A8/CKwRIRwErgs2ADPd0gC_fHiy.m4a
 #+PODCAST_DURATION: 6:59
 #+PODCAST_LENGTH: 3399122
