--- a/content/about.org
+++ b/content/about.org
@@ -15,19 +15,21 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨
 - 专注 Emacs 社区，探索 Emacs 社区背后的 *奇人轶事*
 - 不追求「枯燥无味」的干货，更关注「耐人寻味」经验分享
 
+如果您喜欢我们的节目，欢迎通过[[https://afdian.net/@emacstalk][「爱发电」]]来支持。
+
 * Get in Touch
 - QQ 听友群：[[https://jq.qq.com/?_wv=1027&k=9tAXJ8gG][530146104]]
 - TG 听友群：https://t.me/emacstalk
 - 邮件：[[mailto:emacstalk@liujiacai.net][emacstalk@liujiacai.net]]
-- 网站、微信公众号留言
+- 网站留言：https://emacstalk.github.io/
 
 * Buy me a coffee ☕️
 - [[/images/alipay.jpeg][支付宝]]
 - [[/images/weixinzhifu.jpg][微信支付]]
 
 * Subscribe
-1. 首推使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]] 或在微信公众号 [[https://weixin.sogou.com/weixin?&query=EmacsTalk][EmacsTalk]] 中收听
-2. 其次是 [[https://www.xiaoyuzhoufm.com/podcast/60eabfdd030f8753b9982047][小宇宙]]、[[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]、[[https://music.163.com/#/djradio?id=963834541][网易云音乐]]、[[https://y.qq.com/n/ryqq/albumDetail/000BkGbT1J1Mo2][QQ 音乐]]、[[https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI][Spotify]]、[[https://castbox.fm/channel/EmacsTalk-id4367580][Castbox]]、[[https://pca.st/hbvw3oxs][Pocket Casts]]、[[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（需美区账号，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
+1. 首推使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]] 或在 [[https://www.xiaoyuzhoufm.com/podcast/60eabfdd030f8753b9982047][小宇宙]]、微信公众号 [[https://weixin.sogou.com/weixin?&query=EmacsTalk][EmacsTalk]] 中收听
+2. 其次是 [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]、[[https://music.163.com/#/djradio?id=963834541][网易云音乐]]、[[https://y.qq.com/n/ryqq/albumDetail/000BkGbT1J1Mo2][QQ 音乐]]、[[https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI][Spotify]]、[[https://castbox.fm/channel/EmacsTalk-id4367580][Castbox]]、[[https://pca.st/hbvw3oxs][Pocket Casts]]、[[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（需美区账号，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
   #+ATTR_HTML: :width 500px
   [[/images/weixin.jpg]]
 
