--- a/content/about.org
+++ b/content/about.org
@@ -27,8 +27,10 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨
 - [[/images/alipay.jpeg][支付宝]]
 - [[/images/weixinzhifu.jpg][微信支付]]
 
+* 参与录制
+- https://github.com/EmacsTalk/joinus
 * Subscribe
-1. 首推使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]] 或在 [[https://www.xiaoyuzhoufm.com/podcast/60eabfdd030f8753b9982047][小宇宙]]、微信公众号 [[https://weixin.sogou.com/weixin?&query=EmacsTalk][EmacsTalk]] 中收听
+1. 首推使用泛用性播客客户端订阅 [[https://emacstalk.github.io/podcast/index.xml][RSS]] 或在 [[https://www.xiaoyuzhoufm.com/podcast/60eabfdd030f8753b9982047][小宇宙]]、[[https://h5.qishuier.com/podcasts/195916240953294849][汽水儿]]、微信公众号 [[https://weixin.sogou.com/weixin?&query=EmacsTalk][EmacsTalk]] 中收听
 2. 其次是 [[https://www.ximalaya.com/keji/50656645/][喜马拉雅]]、[[https://music.163.com/#/djradio?id=963834541][网易云音乐]]、[[https://y.qq.com/n/ryqq/albumDetail/000BkGbT1J1Mo2][QQ 音乐]]、[[https://open.spotify.com/show/6QdmFKhhjN6IAhXDIknUqI][Spotify]]、[[https://castbox.fm/channel/EmacsTalk-id4367580][Castbox]]、[[https://pca.st/hbvw3oxs][Pocket Casts]]、[[https://podcasts.apple.com/podcast/emacstalk/id1574036730][Apple Podcasts]]（需美区账号，中国区暂时搜不到，[[https://sspai.com/post/59878][原因]]）
   #+ATTR_HTML: :width 500px
   [[/images/weixin.jpg]]
