--- a/content/podcast/003.org
+++ b/content/podcast/003.org
@@ -6,6 +6,8 @@
 #+PODCAST_IMAGE_SRC: guests/zilongshanren.jpg
 #+PODCAST_IMAGE_ALT: 子龙山人
 
+{{< fadian >}}
+
 * 本期人物
 - 主播：[[https://liujiacai.net/][西瓜]]
 - 嘉宾：[[https://github.com/zilongshanren][子龙山人]]
