--- a/content/donate.org
+++ b/content/donate.org
@@ -1,9 +1,11 @@
 #+TITLE: 发电方式
 #+DATE: 2021-07-31T12:25:36+08:00
 
-* 爱发电
-- https://afdian.net/@emacstalk
+如果您喜欢 EmacsTalk 这档节目，欢迎为本播客发电支持。❤️
+
 * 微信支付
 [[/images/weixinzhifu.jpg]]
 * 支付宝
 [[/images/alipay.jpeg]]
+* 爱发电
+- https://afdian.net/@emacstalk
