--- a/content/podcast/004.org
+++ b/content/podcast/004.org
@@ -7,6 +7,9 @@
 #+PODCAST_IMAGE_SRC: guests/stardiviner.jpg
 #+PODCAST_IMAGE_ALT: stardiviner
 
+{{< fadian >}}
+
+* 概要
 本期节目又请来了一资深 Emacs 用户 [[https://stardiviner.github.io/][stardiviner]]，同时也是一名淘宝店主，用来售卖自己的 IT 技能。
 
 从 org-mode 的使用者到贡献者，他是如何做到的？更让人好奇的是他与众不同的人生经历，大学肄业后，他做过房地产销售、必胜客服务员、幼教老师、IT 支持，最后在无意间发现可以通过售卖自己的 IT 技能来赚钱，从此告别职场，走上了 freelancer 的道路。
