add image for tip 003

--- a/content/post/003.org
+++ b/content/post/003.org
@@ -2,7 +2,7 @@
 #+DATE: 2021-08-08T11:06:00+08:00
 #+TAGS[]: tips
 
-在第五期节目里推荐过 [[https://www.raycast.com/][Raycast]] 这个神奇，之前知道它可以直接执行脚本，但一直没尝试过，最近发现它提供了一个 [[https://github.com/raycast/script-commands][script-commands 仓库]]，里面整理了一些常用的脚本，比如清空回收箱、刷新 DNS 等，比较实用。
+在第五期节目里推荐过 [[https://www.raycast.com/][Raycast]] 这个神器，之前知道它可以直接执行脚本，但一直没尝试过，最近发现它提供了一个 [[https://github.com/raycast/script-commands][script-commands]] 仓库，里面整理了一些常用的脚本，比如清空废纸篓、刷新 DNS 等，比较实用。
 
 但这个仓库的脚本非常多，我需要的只是其中很小一部分，所以需要一种方式来便捷地在两个目录间拷贝文件（称为 src 与 dst）。
 
@@ -13,3 +13,6 @@
 3. 直接回车即可复制文件
 
 设置 =(setq dired-dwim-target t)=  即可使用上述功能。Emacs is amazing！
+
+#+CAPTION: dired 移动文件示意图
+[[https://img.alicdn.com/imgextra/i2/581166664/O1CN01xPceni1z6A51fp11T_!!581166664.gif]]
