--- a/content/about.org
+++ b/content/about.org
@@ -15,7 +15,7 @@ EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。节目主旨
 - 专注 Emacs 社区，探索 Emacs 社区背后的 *奇人轶事*
 - 不追求「枯燥无味」的干货，更关注「耐人寻味」经验分享
 
-*如果您喜欢这档节目，欢迎通过[[https://afdian.net/@emacstalk][「❤️发电」]]来支持*
+*如果您喜欢这档节目，欢迎通过[[https://afdian.net/@emacstalk][「❤️发电」]]来支持* ，也欢迎大家提出反馈意见和建议。
 
 * Get in Touch
 - QQ 听友群：[[https://jq.qq.com/?_wv=1027&k=9tAXJ8gG][530146104]]
