--- a/content/post/011.org
+++ b/content/post/011.org
@@ -3,16 +3,18 @@
 #+DRAFT: false
 #+TAGS[]: tips
 
-Pretty Good Privacy (PGP) 是一款诞生于 1991 年的，一款用于认证、加密的一款软件，现如今已经有了标准化协议 OpenPGP，最常用的实现是 GnuPG，一般提到 GPG 时都是指定 GnuPG。
+Pretty Good Privacy (PGP) 是一款诞生于 1991 年的，一款用于认证、加密的一款软件，现如今已经有了标准化协议 OpenPGP，最常用的实现是 GnuPG，一般提到 GPG 时都是指的 GnuPG。
 
-笔者在保存一些私人文件时，像日记、密码等，就会用 GPG 格式的文件来保存。这篇文章就来介绍下 Emacs 对 GPG 文件的支持，关于如何创建 GPG key，读者可参考 [[http://www.ruanyifeng.com/blog/2013/07/gpg.html][GPG入门教程 by 阮一峰]]
+笔者在保存一些私人文件像日记、密码等时，就会用 GPG 格式的文件来保存。这篇文章就来介绍下 Emacs 对 GPG 的支持，关于如何创建 GPG key，读者可参考 [[http://www.ruanyifeng.com/blog/2013/07/gpg.html][GPG入门教程 by 阮一峰]]
 
 
 * 密码输入
-为了提高 key 安全系数，一般推荐在创建 key 时设置一个密码，这样即使密钥丢了，别人也无法使用。但是每次
-输入密码显得有些繁琐，解决方式是让 gpg-agent 这个进程记住密码，这样只需要在系统第一次使用时输入即可。为了让 Emacs 功能在首次使用 GPG 时，捕获密码输入框，在 minibuffer 中输入密码，需要做如下的配置：
-- 首先是修改 agent 的配置文件
-#+begin_src
+为了提高 key 安全系数，一般推荐在创建 key 时设置一个密码，这样即使密钥丢了，别人也无法使用。
+
+但是每次
+输入密码显得有些繁琐，解决方式是让 gpg-agent 这个进程记住密码，这样只需在系统第一次使用时输入即可。为了让 Emacs 能在首次使用 GPG 时，捕获密码输入框，在 minibuffer 中输入密码，需要做如下的配置：
+1. 修改 agent 的配置文件
+  #+begin_src
 # cat ~/.gnupg/gpg-agent.conf
 
 allow-emacs-pinentry
@@ -20,21 +22,22 @@ allow-loopback-pinentry
 
 # 之后然后加载即可
 gpgconf --reload gpg-agent
-#+end_src
-- 然后安装 [[https://elpa.gnu.org/packages/pinentry.html][pinentry]] 包，配置 loopback，最后启动 pinentry server，参考配置
-#+begin_src emacs-lisp
+  #+end_src
+2. 安装 [[https://elpa.gnu.org/packages/pinentry.html][pinentry]] 包，配置 loopback，
+3. 启动 pinentry server，参考配置
+  #+begin_src emacs-lisp
 (use-package pinentry
   :config
   (setq epa-pinentry-mode 'loopback)
   (pinentry-start))
-#+end_src
+  #+end_src
 
-笔者之前一直很好奇为什么这么复杂，pinentry 是什么东西？为什么需要它？我只是像输入一个密码而已呀。
-直到写这篇文章，我才彻底了解了 pinentry 的作用：
+笔者之前一直很好奇为什么这么复杂，pinentry 是什么东西？为什么需要它？我只是想输入一个密码而已呀。
+直到写这篇文章，我才彻底了解 pinentry 进程的作用：
 #+begin_quote
-它会让用户输入的密码不会因内存不足而换出到磁盘，说到底还是安全问题。
+它会让用户输入的密码不会因内存不足而换出到磁盘
 #+end_quote
-更多技术细节可参考：[[https://sarata.com/manpages/pinentry-curses.1.html][pinentry-curses(1) man page]]
+说到底还是安全问题，更多技术细节可参考：[[https://sarata.com/manpages/pinentry-curses.1.html][pinentry-curses(1) man page]]
 
 * 文件操作
 GPG 格式的文件是一种二进制文件，一般的编辑器是无法打开的，但 Emacs 对 GPG 提供了非常方便的支持，比如创建一个名为 password.org.gpg 的文件，保存时 Emacs 会自动弹出选择框，让用户选择加密的公钥。
@@ -50,12 +53,15 @@ If no one is selected, symmetric encryption will be performed.
 
 #+end_src
 
-而且，这个文件的 major mode 也能正确识别为 org mode，这样就可以非常方便的编辑 GPG 文件。与此同理，可以方便地创建任何格式的 GPG 文件，比如： =diary.md.gpg=
+而且，这个文件的 major mode 也能正确识别为 org mode，这样就可以非常方便的编辑 GPG 文件。与此同理，可以方便地创建任何格式的 GPG 文件，比如： =diary.md.gpg= ，重新打开文件时，Emacs 会自动解密，并设置相应的 major mode。
 
 * EasyPG
-Emacs 自带的 EasyPG 包对常用 GPG 都提供了相应函数的支持：
+Emacs 自带的 EasyPG 包对常用 GPG 命令都提供了相应函数的支持：
 - epa-sign-file
+- epa-encrypt-file
 - epa-decrypt-file
+- epa-encrypt-region
+- epa-decrypt-region
 - epa-import-keys
 - epa-export-keys
 - epa-list-keys
@@ -79,3 +85,4 @@ echo "*.gpg filter=gpg diff=gpg" > ~/.gitattributes
 * 参考
 - [[https://magit.vc/manual/magit/How-to-show-diffs-for-gpg_002dencrypted-files_003f.html][A.1.4 How to show diffs for gpg-encrypted files?]]
 - [[https://emacs-china.org/t/magit-gpg-diff-merge/19084][[求助]magit 处理 gpg 文件： diff、merge]]
+- [[https://beorgapp.com/learning/emacs-encryption/][Getting started with encryption in Org mode on macOS]]
