--- a/content/post/012.org
+++ b/content/post/012.org
@@ -3,7 +3,7 @@
 #+DRAFT: false
 #+TAGS[]: tips
 
-在 org-mode 里些博客文章时，经常都会旁征博引一些链接，之前都是用 =C-c C-l（org-insert-link）= 的快捷键来输入链接，但这是个费事费力的事情，需要去浏览器里面拷贝两次，一次是链接，一次是标题，有没有更好地方式呢？答案是肯定的。不同浏览器做法大同小异，这里以 macOS 上的 Safari 与 Firefox 为例说明。
+在 org-mode 里写博客文章时，经常会旁征博引一些链接，之前都是用 =C-c C-l（org-insert-link）= 的快捷键来输入链接，但这是个费事费力的事情，需要去浏览器里面拷贝两次，一次是链接，一次是标题，有没有更好地方式呢？答案是肯定的。不同浏览器做法大同小异，这里以 macOS 上的 Safari 与 Firefox 为例说明。
 
 * Safari
 在 macOS 中，可以使用下面的 applescript 脚本来获取 org 格式的链接：
